--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@nuxt/ui-pro": "^1.4.4",
     "@vueuse/nuxt": "^11.1.0",
     "nuxt": "^3.13.2",
-    "nuxt-og-image": "^3.0.6"
+    "nuxt-og-image": "^3.0.6",
+    "vue-cal": "^4.10.0"
   },
   "devDependencies": {
     "@nuxt/eslint": "^0.6.0",
